--- a/src/transactions/templates/transactions/till_form.html
+++ b/src/transactions/templates/transactions/till_form.html
@@ -1,9 +1,9 @@
 
 
-{% extends 'products/base.html' %}
+{% extends 'transactions/base.html' %}
 {% block content %}
   <div class="card-container"> 
-    <h2>Add Currency</h2>
+    <h2>Add Till</h2>
     <div class="card">
       <form method="post">
         {% csrf_token %}
