implement the transaction

--- a/src/transactions/templates/transactions/base.html
+++ b/src/transactions/templates/transactions/base.html
@@ -105,6 +105,7 @@ tr:nth-child(even) {
         <li><a href="{% url 'guide_list' %}">guide</a></li>
         <li><a href="{% url 'group_type_list' %}">group_type</a></li>
         <li><a href="{% url 'group_list' %}">group</a></li>
+        <li><a href="{% url 'transaction_add' %}">add</a></li>
       </ul>
   </div>
   <div class="content">
